@@ -1,3 +1,8 @@
+2006-02-20  Roger Leigh  <rleigh@whinlatter.ukfsn.org>
+
+	* schroot/sbuild-session.h (session): The contructor chroots
+	argument is a const reference rather than a value.
+
 2006-02-20  Roger Leigh  <rleigh@debian.org>
 
 	* schroot/dchroot.1.in: Add manual page for dchroot.
